--- a/index.html
+++ b/index.html
@@ -1,65 +1,61 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="index.js"></script>
+    <style>
+        .surpriseColor {
+            color: black;
+        }
+    </style>
 </head>
 <header>
-    WELCOME
+    <nav class="navbar navbar-light bg-light">
+        <span class="navbar-brand mb-0 h1">Welcome!!</span>
+    </nav>
 </header>
-<link rel="stylesheet" href="Styles.css"
-<script src="index.js"></script>
+
 
 <body>
-    <h1>My First Heading</h1>
-    <h2 header="attribute-value">A bit of a smaller heading</h2>
-    <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1">Navbar</span>
-      </nav>
-
-    <p id="global">My first paragraph.</p>
-    <section>Click the button to change the header color!</section>
-    <button type ="button">Click Me!</button>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <article class = "switch">
+    <h1 style="color: white;" id="hidden">Surprise!</h1>
+    <h2 header="attribute-value">Click the button!</h2>
+    <p id="global">This is the first paragraph.</p>
+    <section>Click button to reveal secret text!</section>
+    <button>Click Me!</button>
+    <article class="switch">
         This is an article that will be featured underneath the section.
     </article>
     <aside>
         <img src="https://www.w3schools.com/tags/img_girl.jpg" alt="Image of this line" />
     </aside>
     <a href="https://www.google.com">A link to Google</a>
-    <span class=""border border-primary>
-    <table>
-        <tr>
-            <th>Month</th>
-            <th>Savings</th>
-        </tr>
-        <tr>
-            <td>January</td>
-            <td>$100</td>
-        </tr>
-    </table>
-    </span>
+    <div class="alert alert-primary" role="alert">
+        Beware of item list below!
+    </div>
     <div class="table">
         <p id="aqua">Here is a list of items:</p>
         <ul style="list-style-type: none">
             <li>
-            <li>First item</li>
+            <li>An Item made of...</li>
             <ol class="List" type="1">
-                <li>First item</li>
-                <li>Second item</li>
-                <li>Third item</li>
-            </ol>>
+                <li>The First Item</li>
+                <li>The Second Item</li>
+                <li>The Third Item</li>
+            </ol>
             </li>
-            <li>Second item</li>
-            <li>Third item</li>
+            <li>And this Item</li>
+            <li>And Finally This Item</li>
         </ul>
     </div>
     <nav>
         <header>
-            <h2 class ="Final" Statement>In this section</h2>
+            <h2 class="final" statement>In this section</h2>
             <p>My mother has <span style="color: blue">blue</span> eyes.</p>
         </header>
         <ul>
@@ -67,23 +63,20 @@
             <li><a href="#">Sub section two</a></li>
         </ul>
     </nav>
-    <div class="alert alert-primary" role="alert">
-        A simple primary alert—check it out!
-      </div>
-      
+
     <div class="container">
         <div class="row">
-          <div class="col-sm">
-            One of three columns
-          </div>
-          <div class="col-sm">
-            One of three columns
-          </div>
-          <div class="col-sm">
-            One of three columns
-          </div>
+            <div class="col-sm">
+                One of three columns
+            </div>
+            <div class="col-sm">
+                Two of three columns
+            </div>
+            <div class="col-sm">
+                Three of three columns
+            </div>
         </div>
-      </div>
+    </div>
 </body>
 <footer id="footer">
     GOODBYE
