--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
         <img src="https://www.w3schools.com/tags/img_girl.jpg" alt="Image of this line" />
     </aside>
     <a href="https://www.google.com">A link to Google</a>
+    <span class="border border-primary">
+        <table>
+            <tr>
+                <th>Month</th>
+                <th>Savings</th>
+            </tr>
+            <tr>
+                <td>January</td>
+                <td>$100</td>
+            </tr>
+        </table>
+    </span>
     <div class="alert alert-primary" role="alert">
         Beware of item list below!
     </div>
