--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="alert alert-primary" role="alert">
         Beware of item list below!
     </div>
-    <span class="border"></span>
+    <span class="border">Hello</span>
         <span class="border border-primary">
         <div class="table">
             <p id="aqua">Here is a list of items:</p>
