span moved into <p>

--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
     <div class="alert alert-primary" role="alert">
         Beware of item list below!
     </div>
-    <span class="border">Hello</span>
         <span class="border border-primary">
         <div class="table">
-            <p id="aqua">Here is a list of items:</p>
+            <p id="aqua"><span class="border border-primary">Here is a list of items:</span></p>
             <ul style="list-style-type: none">
                 <li>
                 <li>An Item made of...</li>
