--- a/index.html
+++ b/index.html
@@ -26,37 +26,37 @@
     <h1 style="color: white;" id="hidden">Surprise!</h1>
     <h2 header="attribute-value">Click the button!</h2>
     <p id="global">This is the first paragraph.</p>
-    <section>Click button to reveal secret text!</section>
-    <button>Click Me!</button>
-    <article class="switch">
-        This is an article that will be featured underneath the section.
-    </article>
-    <aside>
-        <img src="https://www.w3schools.com/tags/img_girl.jpg" alt="Image of this line" />
-    </aside>
-    <a href="https://www.google.com">A link to Google</a>
-
+    <div class="container">
+        <section>Click button to reveal secret text!</section>
+        <button>Click Me!</button>
+        <article class="switch">
+            This is an article that will be featured underneath the section.
+        </article>
+        <aside>
+            <img src="https://www.w3schools.com/tags/img_girl.jpg" alt="Image of this line" />
+        </aside>
+        <a href="https://www.google.com">A link to Google</a>
+    </div>
 
     <div class="alert alert-primary" role="alert">
         Beware of item list below!
     </div>
-        <span class="border border-primary">
-        <div class="table">
-            <p id="aqua"><span class="border border-primary">Here is a list of items:</span></p>
-            <ul style="list-style-type: none">
-                <li>
-                <li>An Item made of...</li>
-                <ol class="List" type="1">
-                    <li>The First Item</li>
-                    <li>The Second Item</li>
-                    <li>The Third Item</li>
-                </ol>
-                </li>
-                <li>And this Item</li>
-                <li>And Finally This Item</li>
-            </ul>
-        </div>
-    </span>
+
+    <div class="table">
+        <p id="aqua"><span class="border border-primary">Here is a list of items:</span></p>
+        <ul style="list-style-type: none">
+            <li>
+            <li>An Item made of...</li>
+            <ol class="List" type="1">
+                <li>The First Item</li>
+                <li>The Second Item</li>
+                <li>The Third Item</li>
+            </ol>
+            </li>
+            <li>And this Item</li>
+            <li>And Finally This Item</li>
+        </ul>
+    </div>
     <nav>
         <header>
             <h2 class="final" statement>In this section</h2>
