--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
 </head>
 <header>
     <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1">Welcome!!</span>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    Welcome
+                </div>
+                <div class="col-sm">
+                    <span class="navbar-brand mb-0 h1">Welcome!!</span>
+                </div>
+                <div class="col-sm">
+                    Welcome
+                </div>
+            </div>
+        
     </nav>
 </header>
 
