--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </ol>
             </li>
             <li>And this Item</li>
-            <li>And Finally This Item</li>
+            <li>...And Finally This Item</li>
         </ul>
     </div>
     <nav>
